--- a/requirements.txt
+++ b/requirements.txt
@@ -1,105 +1,74 @@
-aniso8601==10.0.0
-asttokens==3.0.0
-attrs==25.1.0
-beautifulsoup4==4.13.3
-blinker==1.9.0
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
-comm==0.2.2
-contourpy==1.3.1
-cycler==0.12.1
-debugpy==1.8.11
-decorator==5.2.1
-exceptiongroup==1.2.2
-executing==2.1.0
-filelock==3.13.1
-Flask==3.1.0
-Flask-RESTful==0.3.10
-fonttools==4.56.0
-fsspec==2024.6.1
-h11==0.14.0
-idna==3.10
-importlib_metadata==8.6.1
-ipykernel==6.29.5
-ipython==9.0.0
-ipython_pygments_lexers==1.1.1
-itsdangerous==2.2.0
-jedi==0.19.2
-Jinja2==3.1.4
-joblib==1.4.2
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-kiwisolver==1.4.8
-MarkupSafe==3.0.2
-matplotlib==3.10.1
-matplotlib-inline==0.1.7
-mpmath==1.3.0
-nest_asyncio==1.6.0
-networkx==3.3
-numpy==2.2.3
-nvidia-cublas-cu12==12.6.4.1
-nvidia-cuda-cupti-cu12==12.6.80
-nvidia-cuda-nvrtc-cu12==12.6.77
-nvidia-cuda-runtime-cu12==12.6.77
-nvidia-cudnn-cu12==9.5.1.17
-nvidia-cufft-cu12==11.3.0.4
-nvidia-curand-cu12==10.3.7.77
-nvidia-cusolver-cu12==11.7.1.2
-nvidia-cusparse-cu12==12.5.4.2
-nvidia-cusparselt-cu12==0.6.3
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.6.85
-nvidia-nvtx-cu12==12.6.77
-outcome==1.3.0.post0
-packaging==24.2
-pandas==2.2.3
-parso==0.8.4
-pexpect==4.9.0
-pickleshare==0.7.5
-pillow==11.1.0
-pip==25.0
-platformdirs==4.3.6
-prompt_toolkit==3.0.50
-psutil==5.9.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-Pygments==2.19.1
-pyparsing==3.2.1
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pytz==2025.1
-pyzmq==26.2.0
-requests==2.32.3
-scikit-learn==1.6.1
-scipy==1.15.2
-seaborn==0.13.2
-selenium==4.29.0
-setuptools==75.8.0
-six==1.17.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.6
-stack_data==0.6.3
-sympy==1.13.1
-threadpoolctl==3.5.0
-torch==2.6.0+cu126
-torchaudio==2.6.0+cu126
-torchvision==0.21.0+cu126
-tornado==6.4.2
-traitlets==5.14.3
-trio==0.29.0
-trio-websocket==0.12.2
-triton==3.2.0
-typing_extensions==4.12.2
-tzdata==2025.1
-urllib3==2.3.0
-wcwidth==0.2.13
-webdriver-manager==4.0.2
-websocket-client==1.8.0
-Werkzeug==3.1.3
-wheel==0.45.1
-whois==1.20240129.2
-wsproto==1.2.0
-zipp==3.21.0
+aniso8601
+attrs
+beautifulsoup4
+blinker
+certifi
+charset-normalizer
+click
+contourpy
+cycler
+filelock
+Flask
+Flask-RESTful
+fonttools
+fsspec
+gunicorn
+h11
+idna
+itsdangerous
+Jinja2
+joblib
+kiwisolver
+MarkupSafe
+matplotlib
+mpmath
+networkx
+numpy
+nvidia-cublas-cu12
+nvidia-cuda-cupti-cu12
+nvidia-cuda-nvrtc-cu12
+nvidia-cuda-runtime-cu12
+nvidia-cudnn-cu12
+nvidia-cufft-cu12
+nvidia-curand-cu12
+nvidia-cusolver-cu12
+nvidia-cusparse-cu12
+nvidia-cusparselt-cu12
+nvidia-nccl-cu12
+nvidia-nvjitlink-cu12
+nvidia-nvtx-cu12
+outcome
+packaging
+pandas
+pillow
+pyparsing
+PySocks
+python-dateutil
+python-dotenv
+pytz
+requests
+scikit-learn
+scipy
+seaborn
+selenium
+setuptools
+six
+sniffio
+sortedcontainers
+soupsieve
+sympy
+threadpoolctl
+torch
+torchaudio
+torchvision
+trio
+trio-websocket
+triton
+tzdata
+urllib3
+webdriver-manager
+websocket-client
+Werkzeug
+wheel
+whois
+wsproto
